add upgradeable feature on crate level

--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -39,6 +39,7 @@ std = [
     "openbrush/std",
     "pallet-assets-chain-extension/ink-std",
 ]
+upgradeable = []
 psp22 = []
 psp22_pallet = []
 psp34 = []
