--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ pausable = ["openbrush_contracts/pausable"]
 timelock_controller = ["openbrush_contracts/timelock_controller"]
 proxy = ["openbrush_contracts/proxy"]
 diamond = ["openbrush_contracts/diamond"]
+upgradeable = []
 
 test-all = [
     "psp22",
