--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           toolchain: nightly-2023-03-19
           override: true
           components: rustfmt
+          default: true
 
       - name: Rustfmt check
         run: cargo +nightly fmt --all -- --check
@@ -34,6 +35,7 @@ jobs:
           toolchain: nightly-2023-03-19
           override: true
           components: rustfmt, clippy
+          default: true
 
       - name: Build & Run all default unit tests
         run: |
