--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           default: true
 
       - name: Rustfmt check
-        run: cargo +nightly fmt --all -- --check
+        run: cargo +nightly-2023-03-19 fmt --all -- --check
   unit-test:
     concurrency:
       group: unit-test-${{ github.ref }}
@@ -39,10 +39,10 @@ jobs:
 
       - name: Build & Run all default unit tests
         run: |
-          RUSTFLAGS="-D warnings" cargo +nightly test --workspace --features test-all -- --test-threads=10
+          RUSTFLAGS="-D warnings" cargo +nightly-2023-03-19 test --workspace --features test-all -- --test-threads=10
       - name: Build & Run pallet unit tests
         run: |
-          RUSTFLAGS="-D warnings" cargo +nightly test --workspace --features psp22_pallet -- --test-threads=10
+          RUSTFLAGS="-D warnings" cargo +nightly-2023-03-19 test --workspace --features psp22_pallet -- --test-threads=10
   examples-builds:
     concurrency:
       group: examples-builds-${{ github.ref }}
