--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ include = ["Cargo.toml", "src/**/*.rs"]
 [dependencies]
 ink = { version = "4.1.0", default-features = false}
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.3", default-features = false, features = ["derive"] }
 
 openbrush_contracts = { version = "~3.1.1", path = "contracts", default-features = false }
 openbrush_lang = { version = "~3.1.1", path = "lang", default-features = false }
@@ -42,6 +42,8 @@ crate-type = [
 
 [dev-dependencies]
 ink_e2e = "4.1.0"
+ink_env = "4.1.0"
+trybuild = "1.0.80"
 
 [features]
 default = ["std"]
