--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install specific nightly
+      - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2023-01-01
+          toolchain: stable
           override: true
           components: rustfmt
           default: true
 
       - name: Rustfmt check
-        run: cargo +nightly-2023-01-01 fmt --all -- --check
+        run: cargo fmt --all -- --check
   unit-test:
     concurrency:
       group: unit-test-${{ github.ref }}
@@ -29,20 +29,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install specific nightly
+      - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2023-01-01
+          toolchain: stable
           override: true
           components: rustfmt, clippy
           default: true
 
       - name: Build & Run all default unit tests
         run: |
-          RUSTFLAGS="-D warnings" cargo +nightly-2023-01-01 test --workspace --features test-all -- --test-threads=10
+          RUSTFLAGS="-D warnings" cargo test --workspace --features test-all -- --test-threads=10
       - name: Build & Run pallet unit tests
         run: |
-          RUSTFLAGS="-D warnings" cargo +nightly-2023-01-01 test --workspace --features psp22_pallet -- --test-threads=10
+          RUSTFLAGS="-D warnings" cargo test --workspace --features psp22_pallet -- --test-threads=10
   examples-builds:
     concurrency:
       group: examples-builds-${{ github.ref }}
