add `Upgradeable` trait, which exposes the `set_code_hash` function.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ pausable = ["openbrush_contracts/pausable"]
 timelock_controller = ["openbrush_contracts/timelock_controller"]
 proxy = ["openbrush_contracts/proxy"]
 diamond = ["openbrush_contracts/diamond"]
+upgradeable = ["openbrush_contracts/upgradeable"]
 
 test-all = [
     "psp22",
