--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -57,9 +57,9 @@ proxy = [
 diamond = [
     "ownable",
 ]
+upgradeable = []
 test-all = [
     "psp22",
-    # "psp22_pallet", we ignore it during testing. It requries it own run of tests
     "psp34",
     "psp37",
     "access_control",
