--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -221,7 +221,7 @@ jobs:
       - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.69
+          toolchain: stable
           override: true
           default: true
           target: wasm32-unknown-unknown
