--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,14 @@ jobs:
         with:
           node-version: '16.x'
       - uses: actions/checkout@v3
+      - name: Install stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.69
+          override: true
+          default: true
+          target: wasm32-unknown-unknown
+          components: rust-src
       - name: NPM install dependencies
         run: |
           npm i
