--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ categories = ["no-std", "embedded"]
 include = ["Cargo.toml", "src/**/*.rs"]
 
 [dependencies]
-ink = { version = "4.2.1", default-features = false}
+ink = { version = "4.2.1", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.6", default-features = false, features = ["derive"] }
 
 openbrush_contracts = { version = "~3.1.1", path = "contracts", default-features = false }
 openbrush_lang = { version = "~3.1.1", path = "lang", default-features = false }
