--- a/examples/diamond/Cargo.toml
+++ b/examples/diamond/Cargo.toml
@@ -11,7 +11,7 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { path = "../..", default-features = false, features = ["diamond"] }
+openbrush = { path = "../..", default-features = false, features = ["diamond", "upgradeable"] }
 
 [lib]
 name = "my_diamond"
