--- a/examples/diamond/psp22_metadata_facet/Cargo.toml
+++ b/examples/diamond/psp22_metadata_facet/Cargo.toml
@@ -11,7 +11,7 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { path = "../../..", default-features = false, features = ["psp22", "ownable"] }
+openbrush = { path = "../../..", default-features = false, features = ["psp22", "ownable", "upgradeable"] }
 
 [lib]
 name = "my_psp22_metadata_facet"
