--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"] 
 
 openbrush_contracts = { version = "~3.1.1", path = "contracts", default-features = false }
 openbrush_lang = { version = "~3.1.1", path = "lang", default-features = false }
+#secp256k1 = { version = "0.14.1" }
 
 [lib]
 name = "openbrush"
