--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -22,6 +22,8 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"],
 openbrush = { version = "~3.1.1", package = "openbrush_lang", path = "../lang", default-features = false }
 
 pallet-assets-chain-extension = { git = "https://github.com/Brushfam/pallet-assets-chain-extension", branch = "polkadot-v0.9.37", default-features = false, features = ["ink-lang"]  }
+blake2 = { version = "0.10.6", default-features = false }
+sp-core = { version = "21.0.0", default-features = false, features = ["full_crypto"] }
 
 [lib]
 name = "openbrush_contracts"
@@ -38,6 +40,7 @@ std = [
     "scale-info/std",
     "openbrush/std",
     "pallet-assets-chain-extension/ink-std",
+    "sp-core/std",
 ]
 psp22 = []
 psp22_pallet = []
