--- a/examples/psp22_extensions/permit/Cargo.toml
+++ b/examples/psp22_extensions/permit/Cargo.toml
@@ -12,10 +12,12 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"],
 
 # These dependencies
 openbrush = { path = "../../..", default-features = false, features = ["psp22"] }
+ecdsa = { version = "0.16.7", default-features = false, optional = true }
 
 [dev-dependencies]
 ink_e2e = "4.2.1"
 test_helpers = { path = "../../test_helpers", default-features = false }
+blake2 = { version = "0.10.6", default-features = false }
 
 [lib]
 name = "my_psp22_permit"
@@ -32,7 +34,9 @@ std = [
     "openbrush/std",
 ]
 ink-as-dependency = []
-e2e-tests = []
+e2e-tests = [
+    "ecdsa"
+]
 
 [profile.dev]
 codegen-units = 16
