--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -48,7 +48,7 @@ ownable = []
 payment_splitter = []
 reentrancy_guard = []
 pausable = []
-erc165 = []
+psp61 = []
 timelock_controller = [
     "access_control",
 ]
