--- a/example_project_structure/Cargo.toml
+++ b/example_project_structure/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lending_project"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <green@727.ventures, dominik.krizo@727.ventures>"]
 edition = "2021"
 
