--- a/example_project_structure/contracts/shares/Cargo.toml
+++ b/example_project_structure/contracts/shares/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shares_contract"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <dominik.krizo@727.ventures>"]
 edition = "2021"
 
