--- a/examples/access_control_extensions/enumerable/Cargo.toml
+++ b/examples/access_control_extensions/enumerable/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_access_control_enumerable"
-version = "3.1.1"
+version = "4.0.0-beta"
 authors = ["Brushfam <nameless.endless@727.ventures>"]
 edition = "2021"
 
