--- a/examples/flash-borrower/Cargo.toml
+++ b/examples/flash-borrower/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flash_borrower"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <dominik.krizo@727.ventures>"]
 edition = "2021"
 
