--- a/examples/proxy/psp22_metadata_upgradeable/Cargo.toml
+++ b/examples/proxy/psp22_metadata_upgradeable/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_psp22_metadata_upgradeable"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <horacio.lex@727.ventures>"]
 edition = "2021"
 
