--- a/examples/psp22_extensions/burnable/Cargo.toml
+++ b/examples/psp22_extensions/burnable/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_psp22_burnable"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <m.konstantinovna@727.ventures>"]
 edition = "2021"
 
