--- a/examples/psp22_pallet_extensions/metadata/Cargo.toml
+++ b/examples/psp22_pallet_extensions/metadata/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_psp22_pallet_metadata"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <nameless.endless@727.ventures>"]
 edition = "2021"
 
