--- a/examples/psp34_extensions/mintable/Cargo.toml
+++ b/examples/psp34_extensions/mintable/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_psp34_mintable"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <dominik.krizo@727.ventures>"]
 edition = "2021"
 
