--- a/examples/psp37_extensions/batch/Cargo.toml
+++ b/examples/psp37_extensions/batch/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_psp37_batch"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <artem.lech@727.ventures>"]
 edition = "2021"
 
