--- a/examples/test_helpers/Cargo.toml
+++ b/examples/test_helpers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test_helpers"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <varex.silver@727.ventures>"]
 edition = "2021"
 
