--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -23,6 +23,8 @@ openbrush = { version = "~3.1.1", package = "openbrush_lang", path = "../lang", 
 
 pallet-assets-chain-extension = { git = "https://github.com/Brushfam/pallet-assets-chain-extension", branch = "polkadot-v0.9.37", default-features = false, features = ["ink-lang"]  }
 
+blake2 = "0.10.6"
+
 [lib]
 name = "openbrush_contracts"
 path = "src/lib.rs"
