--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Brushfam/openbrush-contracts"
-documentation = "https://docs.openbrush.io"
-homepage = "https://727.ventures"
+documentation = "https://learn.brushfam.io/docs/openbrush"
+homepage = "https://brushfam.io/"
 description = "Reusable implementations of contracts and traits for interaction with them."
 keywords = ["wasm", "brushfam", "smart-contracts", "blockchain", "ink"]
 categories = ["no-std", "embedded"]
