--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ ownable = ["openbrush_contracts/ownable"]
 payment_splitter = ["openbrush_contracts/payment_splitter"]
 reentrancy_guard = ["openbrush_contracts/reentrancy_guard"]
 pausable = ["openbrush_contracts/pausable"]
-timelock_controller = ["openbrush_contracts/timelock_controller"]
+governance = ["openbrush_contracts/governance"]
 proxy = ["openbrush_contracts/proxy"]
 diamond = ["openbrush_contracts/diamond"]
 upgradeable = ["openbrush_contracts/upgradeable"]
@@ -78,7 +78,7 @@ test-all = [
     "payment_splitter",
     "reentrancy_guard",
     "pausable",
-    "timelock_controller",
+    "governance",
     "proxy",
     "diamond",
 ]
