--- a/examples/governance/governor/Cargo.toml
+++ b/examples/governance/governor/Cargo.toml
@@ -11,14 +11,13 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { path = "../../..", default-features = false, features = ["governance"] }
+openbrush = { path = "../../..", default-features = false, features = ["governance", "utils"] }
 
 [dev-dependencies]
 ink_e2e = "4.2.1"
 test_helpers = { path = "../../test_helpers", default-features = false }
 
 [lib]
-name = "my_timelock_controller"
 path = "lib.rs"
 
 [features]
