--- a/examples/governance/votes/Cargo.toml
+++ b/examples/governance/votes/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "my_governor"
+name = "nonces"
 version= "4.0.0-beta"
 authors = ["Brushfam <varex.silver@727.ventures>"]
 edition = "2021"
@@ -11,7 +11,7 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { path = "../../..", default-features = false, features = ["governance", "utils"] }
+openbrush = { path = "../../..", default-features = false, features = ["utils"] }
 
 [dev-dependencies]
 ink_e2e = "4.2.1"
@@ -34,5 +34,3 @@ e2e-tests = []
 
 [profile.dev]
 codegen-units = 16
-overflow-checks = false     # Disable integer overflow checks.
-lto = false                 # Enable full link-time optimization.
