--- a/typechain-compiler-config.json
+++ b/typechain-compiler-config.json
@@ -1,5 +1,6 @@
 {
   "projectFiles": [
+    "examples/psp22_extensions/votes/Cargo.toml",
     "examples/governance/governor/Cargo.toml",
     "examples/nonces/Cargo.toml"
   ],
