--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-transform-runtime": "^7.14.2",
     "@babel/preset-env": "^7.7.4",
     "@babel/register": "^7.7.4",
+    "@polkadot/api-contract": "^10.9.1",
     "@727-ventures/typechain-compiler": "^1.1.4",
     "@727-ventures/typechain-types": "^1.1.2",
     "@types/chai": "^4.3.0",
