--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "4.0.0-beta",
   "private": true,
   "dependencies": {
+    "@727-ventures/typechain-compiler": "^1.1.4",
+    "@727-ventures/typechain-types": "^1.1.2",
     "@babel/core": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.14.2",
     "@babel/preset-env": "^7.7.4",
@@ -15,6 +17,7 @@
     "@types/mocha": "^8.0.3",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
+    "blake2": "github:vrza/node-blake2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.26.0",
