--- a/examples/psp22_extensions/permit/Cargo.toml
+++ b/examples/psp22_extensions/permit/Cargo.toml
@@ -5,8 +5,7 @@ authors = ["Brushfam <m.konstantinovna@727.ventures>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.2.1", default-features = false}
-
+ink = { git = "https://github.com/paritytech/ink", rev = "a71990f",  default-features = false}
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
