--- a/examples/accessors_attr/Cargo.toml
+++ b/examples/accessors_attr/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "accessors_attr"
-version= "4.0.0-beta"
+version= "4.0.0-beta.1"
 authors = ["Brushfam <green@727.ventures>"]
 edition = "2021"
 
