change rust version from 1.69 to stable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.69
+          toolchain: stable
           override: true
           components: rustfmt, clippy
           default: true
@@ -62,7 +62,7 @@ jobs:
       - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.69
+          toolchain: stable
           override: true
           default: true
           target: wasm32-unknown-unknown
@@ -140,7 +140,7 @@ jobs:
       - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.69
+          toolchain: stable
           override: true
           default: true
           target: wasm32-unknown-unknown
@@ -247,7 +247,7 @@ jobs:
       - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.69
+          toolchain: stable
           override: true
           default: true
           target: wasm32-unknown-unknown
@@ -275,7 +275,7 @@ jobs:
       - name: Install stable
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.69
+          toolchain: stable
           override: true
           default: true
           target: wasm32-unknown-unknown
