remove unnecessary examples, update dockerfile

--- a/examples/contract_size/lazy_check/Cargo.toml
+++ b/examples/contract_size/lazy_check/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "my_governor"
+name = "lazy_check"
 version= "4.0.0-beta"
 authors = ["Brushfam <varex.silver@727.ventures>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.2.1", default-features = false}
+ink = { version = "4.3.0", default-features = false}
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { path = "../../..", default-features = false, features = ["governance", "utils"] }
+openbrush = { path = "../../..", default-features = false, features = ["utils"] }
 
 [dev-dependencies]
-ink_e2e = "4.2.1"
+ink_e2e = "4.3.0"
 test_helpers = { path = "../../test_helpers", default-features = false }
 
 [lib]
@@ -34,5 +34,3 @@ e2e-tests = []
 
 [profile.dev]
 codegen-units = 16
-overflow-checks = false     # Disable integer overflow checks.
-lto = false                 # Enable full link-time optimization.
