--- a/examples/psp22_extensions/permit/Cargo.toml
+++ b/examples/psp22_extensions/permit/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "my_psp22_permit"
 version = "3.1.1"
-authors = ["Brushfam <m.konstantinovna@727.ventures>"]
+authors = ["Brushfam <artem.lech@brushfam.io>"]
 edition = "2021"
 
 [dependencies]
-ink = { git = "https://github.com/paritytech/ink", rev = "a71990f",  default-features = false}
+ink = { version = "4.2.1", default-features = false}
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
@@ -16,7 +16,6 @@ ecdsa = { version = "0.16.7", default-features = false, optional = true }
 [dev-dependencies]
 ink_e2e = "4.2.1"
 test_helpers = { path = "../../test_helpers", default-features = false }
-blake2 = { version = "0.10.6", default-features = false }
 
 [lib]
 name = "my_psp22_permit"
