--- a/typechain-compiler-config.json
+++ b/typechain-compiler-config.json
@@ -1,5 +1,5 @@
 {
-  "projectFiles": ["example_project_structure/contracts/**", "examples/upgradeable/**", "examples/diamond/**", "examples/proxy/**"],
+  "projectFiles": ["example_project_structure/contracts/**", "examples/**/Cargo.toml", "examples/**/**/Cargo.toml"],
   "artifactsPath": "./artifacts",
   "typechainGeneratedPath": "./typechain-generated"
 }
