--- a/examples/psp22_extensions/permit/Cargo.toml
+++ b/examples/psp22_extensions/permit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_psp22_permit"
-version = "3.1.1"
+version = "4.0.0-beta.1"
 authors = ["Brushfam <artem.lech@brushfam.io>"]
 edition = "2021"
 
@@ -16,6 +16,8 @@ ecdsa = { version = "0.16.7", default-features = false, optional = true }
 [dev-dependencies]
 ink_e2e = "4.2.1"
 test_helpers = { path = "../../test_helpers", default-features = false }
+secp256k1 = { version = "0.27.0", default-features = false }
+
 
 [lib]
 name = "my_psp22_permit"
