--- a/examples/governance/governor/Cargo.toml
+++ b/examples/governance/governor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_governor"
-version= "4.0.0-beta"
+version= "4.0.0-beta.1"
 authors = ["Brushfam <varex.silver@727.ventures>"]
 edition = "2021"
 
@@ -11,7 +11,7 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { path = "../../..", default-features = false, features = ["governance", "utils"] }
+openbrush = { path = "../../..", default-features = false, features = ["governance"] }
 
 [dev-dependencies]
 ink_e2e = "4.2.1"
