--- a/examples/psp22_extensions/votes/Cargo.toml
+++ b/examples/psp22_extensions/votes/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my_psp22_votes"
-version= "4.0.0-beta"
+version= "4.0.0-beta.1"
 authors = ["Brushfam <varex.silver@727.ventures>"]
 edition = "2021"
 
