--- a/examples/utils/nonces/Cargo.toml
+++ b/examples/utils/nonces/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nonces"
-version= "4.0.0-beta"
+version= "4.0.0-beta.1"
 authors = ["Brushfam <varex.silver@727.ventures>"]
 edition = "2021"
 
