--- a/examples/utils/nonces/Cargo.toml
+++ b/examples/utils/nonces/Cargo.toml
@@ -11,7 +11,7 @@ scale = { package = "parity-scale-codec", version = "3", default-features = fals
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 # These dependencies
-openbrush = { path = "../../..", default-features = false, features = ["utils"] }
+openbrush = { path = "../../..", default-features = false, features = ["nonces"] }
 
 [dev-dependencies]
 ink_e2e = "4.2.1"
