--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ governance = ["openbrush_contracts/governance", "openbrush_contracts/checkpoints
 crypto = ["openbrush_contracts/crypto"]
 nonces = ["openbrush_contracts/nonces"]
 checkpoints = ["openbrush_contracts/checkpoints"]
+non-upgradeable-lazy = ["openbrush_contracts/non-upgradeable-lazy"]
 
 test-all = [
     "psp22",
