--- a/examples/access_control_extensions/enumerable/Cargo.toml
+++ b/examples/access_control_extensions/enumerable/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Brushfam <nameless.endless@727.ventures>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.3.0", default-features = false}
+ink = { version = "5.0.0-alpha", default-features = false}
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
