--- a/examples/psp22_extensions/permit/Cargo.toml
+++ b/examples/psp22_extensions/permit/Cargo.toml
@@ -17,9 +17,7 @@ ecdsa = { version = "0.16.7", default-features = false, optional = true }
 ink_e2e = "4.3.0"
 ink_env = "4.3.0"
 test_helpers = { path = "../../test_helpers", default-features = false }
-secp256k1 = { version = "0.27.0", default-features = false }
-subxt-signer = "0.31.0"
-
+subxt-signer = {version = "0.31.0", default-features = false, features = ["ecdsa"]}
 
 [lib]
 name = "my_psp22_permit"
