--- a/examples/access_control/Cargo.toml
+++ b/examples/access_control/Cargo.toml
@@ -14,7 +14,7 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"],
 openbrush = { path = "../..", default-features = false, features = ["access_control", "psp34"] }
 
 [dev-dependencies]
-ink_e2e = "4.3.0"
+ink_e2e = "5.0.0-alpha"
 test_helpers = { path = "../test_helpers", default-features = false }
 
 [lib]
