--- a/examples/accessors_attr/Cargo.toml
+++ b/examples/accessors_attr/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Brushfam <green@727.ventures>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.2.0", default-features = false}
+ink = { version = "5.0.0-alpha", default-features = false}
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
@@ -13,7 +13,7 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"],
 openbrush = { path = "../..", default-features = false }
 
 [dev-dependencies]
-ink_e2e = "4.2"
+ink_e2e = "5.0.0-alpha"
 test_helpers = { path = "../test_helpers", default-features = false }
 
 [lib]
