--- a/examples/utils/nonces/Cargo.toml
+++ b/examples/utils/nonces/Cargo.toml
@@ -14,7 +14,7 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"],
 openbrush = { path = "../../..", default-features = false, features = ["nonces"] }
 
 [dev-dependencies]
-ink_e2e = "4.2.1"
+ink_e2e = "5.0.0-alpha"
 test_helpers = { path = "../../test_helpers", default-features = false }
 
 [lib]
