--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -46,6 +46,7 @@ psp34 = []
 psp37 = []
 access_control = []
 ownable = []
+ownable_2_step = ["ownable"]
 payment_splitter = []
 reentrancy_guard = []
 pausable = []
